--- a/index.html
+++ b/index.html
@@ -543,12 +543,28 @@
         doc.setTextColor(0, 121, 107);
         doc.text("NUNES MECÂNICA AUTOMOTIVA", 14, 22);
 
+        doc.setFontSize(13);
+        doc.setTextColor(40);
+        doc.text("R. Ana Prodocimo, 39 - Alm. Tamandaré - PR, 83506-050", 14, 30);
+
+        doc.setFontSize(13);
+        doc.setTextColor(40);
+        doc.text("Mecânicos: Claudinei Nunes e Diego Luiz ", 14, 34);
+
+         doc.setFontSize(13);
+        doc.setTextColor(40);
+        doc.text("Telefone: (41)98502-1326", 14, 38);
+
+        doc.setFontSize(13);
+        doc.setTextColor(40);
+        doc.text("______________________________________________", 14, 40);
+
         doc.setFontSize(17);
         doc.setTextColor(40);
-        doc.text("Orçamento de Serviços", 14, 32);
+        doc.text("Orçamento de Serviços", 14, 48);
 
-        doc.setFontSize(11);
-        let y = 42;
+        doc.setFontSize(13);
+        let y = 56;
 
         doc.setFont(undefined, "bold");
         doc.text("Cliente:", 14, y);
