--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nunes Mecânica Automotiva</title>
-  <link rel="shortcut icon" rel="stylesheet" href="style.css">
-  <link href="logonunes.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="logonunes.png" type="image/png">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;display=swap">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
