--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nunes Mecânica Automotiva</title>
   <link rel="stylesheet" href="style.css">
-  <link href="logonunes.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="logonunes.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;display=swap">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
