--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html><html lang="pt-BR"><head><meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://code.jquery.com https://unpkg.com https://d3js.org https://threejs.org https://cdn.plot.ly https://stackpath.bootstrapcdn.com https://maps.googleapis.com https://cdn.tailwindcss.com https://ajax.googleapis.com https://kit.fontawesome.com https://cdn.datatables.net https://maxcdn.bootstrapcdn.com https://code.highcharts.com https://tako-static-assets-production.s3.amazonaws.com https://www.youtube.com https://fonts.googleapis.com https://fonts.gstatic.com https://pfst.cf2.poecdn.net https://puc.poecdn.net https://i.imgur.com https://wikimedia.org https://*.icons8.com https://*.giphy.com https://picsum.photos https://images.unsplash.com; frame-src 'self' https://www.youtube.com https://trytako.com; child-src 'self'; manifest-src 'self'; worker-src 'self'; upgrade-insecure-requests; block-all-mixed-content;">
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self' 'unsafe-inline' 'unsafe-eval' data: blob: https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://code.jquery.com https://unpkg.com https://d3js.org https://threejs.org https://cdn.plot.ly https://stackpath.bootstrapcdn.com https://maps.googleapis.com https://cdn.tailwindcss.com https://ajax.googleapis.com https://kit.fontawesome.com https://cdn.datatables.net https://maxcdn.bootstrapcdn.com https://code.highcharts.com https://tako-static-assets-production.s3.amazonaws.com https://www.youtube.com https://fonts.googleapis.com https://fonts.gstatic.com https://pfst.cf2.poecdn.net https://puc.poecdn.net https://i.imgur.com https://wikimedia.org https://*.icons8.com https://*.giphy.com https://picsum.photos https://images.unsplash.com; frame-src 'self' https://www.youtube.com https://trytako.com; child-src 'self'; manifest-src 'self'; worker-src 'self'; upgrade-insecure-requests; block-all-mixed-content;">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nunes Mecânica Automotiva</title>
@@ -8,7 +13,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
   <style>
-    .logo-upload.hide { display: none; }
+    .logo-upload.hide {
+      display: none;
+    }
+
     .autocomplete-items {
       position: absolute;
       border: 1px solid #d4d4d4;
@@ -19,16 +27,19 @@
       overflow-y: auto;
       border-radius: 0 0 5px 5px;
     }
+
     .autocomplete-items div {
       padding: 7px 10px;
       cursor: pointer;
       border-bottom: 1px solid #f1f1f1;
     }
+
     .autocomplete-items div:hover {
       background-color: #f1f1f1;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
     <aside class="sidebar">
@@ -56,7 +67,7 @@
       <header>
         <h1 id="main-title">Orçamentos</h1>
       </header>
-      
+
       <!-- Orçamentos -->
       <section id="page-orcamentos">
         <div style="display:flex;justify-content:space-between;align-items:center;">
@@ -101,10 +112,12 @@
             <label>Itens do Orçamento</label>
             <div>
               <div class="autocomplete-wrapper" style="width:100%;">
-                <input type="text" id="orc-item-nome" placeholder="Descrição do item (ou pesquise peça do estoque)" style="flex:2;" autocomplete="off">
+                <input type="text" id="orc-item-nome" placeholder="Descrição do item (ou pesquise peça do estoque)"
+                  style="flex:2;" autocomplete="off">
                 <input type="number" id="orc-item-valor" placeholder="Valor (R$)" style="flex:1;">
                 <input type="number" id="orc-item-qtd" placeholder="Qtd" min="1" style="width:70px;">
-                <button type="button" class="btn btn-sm btn-outline" onclick="adicionarItemOrcamento()">Adicionar</button>
+                <button type="button" class="btn btn-sm btn-outline"
+                  onclick="adicionarItemOrcamento()">Adicionar</button>
               </div>
               <div id="orc-itens-list"></div>
             </div>
@@ -175,7 +188,8 @@
             <label>Serviços/Peças</label>
             <div>
               <div class="autocomplete-wrapper" style="width:100%;">
-                <input type="text" id="os-item-nome" placeholder="Serviço ou peça do estoque" style="flex:2;" autocomplete="off">
+                <input type="text" id="os-item-nome" placeholder="Serviço ou peça do estoque" style="flex:2;"
+                  autocomplete="off">
                 <input type="number" id="os-item-valor" placeholder="Valor (R$)" style="flex:1;">
                 <input type="number" id="os-item-qtd" placeholder="Qtd" min="1" style="width:70px;">
                 <button type="button" class="btn btn-sm btn-outline" onclick="adicionarItemOS()">Adicionar</button>
@@ -251,7 +265,8 @@
                 <input type="text" id="cli-veiculo-placa" placeholder="Placa">
                 <input type="number" id="cli-veiculo-ano" placeholder="Ano">
                 <input type="text" id="cli-veiculo-cor" placeholder="Cor">
-                <button type="button" class="btn btn-sm btn-outline" onclick="adicionarVeiculo()">Adicionar à lista</button>
+                <button type="button" class="btn btn-sm btn-outline" onclick="adicionarVeiculo()">Adicionar à
+                  lista</button>
                 <div id="veiculos-adicionados"></div>
               </div>
             </div>
@@ -262,7 +277,7 @@
           </form>
         </div>
       </section>
-      
+
       <!-- ESTOQUE -->
       <section id="page-estoque" class="hide">
         <div style="display:flex;justify-content:space-between;align-items:center;">
@@ -400,7 +415,7 @@
       if (base64) {
         logoUploadDiv.classList.add('hide');
       } else {
-        logoUploadDiv.classList.remove('hide'); 
+        logoUploadDiv.classList.remove('hide');
       }
     }
     window.addEventListener('DOMContentLoaded', function () {
@@ -465,7 +480,7 @@
             <td>
               ${peca.qtd}
               <button class="btn btn-sm btn-outline" title="Entrada" onclick="alterarQtdEstoque(${peca.id},1)">+</button>
-              <button class="btn btn-sm btn-outline" title="Saída" onclick="alterarQtdEstoque(${peca.id},-1)" ${peca.qtd<=0?'disabled':''}>-</button>
+              <button class="btn btn-sm btn-outline" title="Saída" onclick="alterarQtdEstoque(${peca.id},-1)" ${peca.qtd <= 0 ? 'disabled' : ''}>-</button>
             </td>
             <td>R$ ${parseFloat(peca.preco).toLocaleString('pt-BR')}</td>
             <td>
@@ -552,7 +567,7 @@
       let valor = document.getElementById(valorId);
       let qtd = document.getElementById(qtdId);
 
-      input.addEventListener("input", function() {
+      input.addEventListener("input", function () {
         closeAllLists();
         let val = this.value;
         if (!val) return false;
@@ -568,7 +583,7 @@
           ) {
             item = document.createElement("div");
             item.innerHTML = `<b>${peca.nome}</b> - cód: ${peca.codigo} | R$ ${parseFloat(peca.preco).toLocaleString('pt-BR')} | Estoque: ${peca.qtd}`;
-            item.addEventListener("click", function(e) {
+            item.addEventListener("click", function (e) {
               input.value = peca.nome;
               valor.value = peca.preco;
               qtd.value = 1;
@@ -584,7 +599,7 @@
           list.appendChild(item);
         }
       });
-      document.addEventListener("click", function(e) { closeAllLists(e.target); });
+      document.addEventListener("click", function (e) { closeAllLists(e.target); });
       function closeAllLists(elmnt) {
         let x = document.getElementsByClassName("autocomplete-items");
         for (let i = 0; i < x.length; i++) {
@@ -601,7 +616,7 @@
     function adicionarItemOrcamento() {
       const nome = document.getElementById('orc-item-nome').value.trim();
       const valor = parseFloat(document.getElementById('orc-item-valor').value);
-      let qtd = parseInt(document.getElementById('orc-item-qtd').value)||1;
+      let qtd = parseInt(document.getElementById('orc-item-qtd').value) || 1;
       let estoqueId = null;
       let estoqueMatch = window.estoque.find(p => p.nome.toUpperCase() === nome.toUpperCase());
       if (estoqueMatch) {
@@ -611,7 +626,7 @@
           return;
         }
       }
-      if (nome && valor && valor > 0 && qtd>0) {
+      if (nome && valor && valor > 0 && qtd > 0) {
         orcamentoItensTmp.push({ nome, valor, qtd, estoqueId });
         document.getElementById('orc-item-nome').value = '';
         document.getElementById('orc-item-valor').value = '';
@@ -635,7 +650,7 @@
         orcamentoItensTmp.map((item, i) => `
         <tr>
           <td>${item.nome}${item.estoqueId ? ' <span style="color:#009688;font-size:.9em;">[Estoque]</span>' : ''}</td>
-          <td style="width:70px;">Qtd: ${item.qtd||1}</td>
+          <td style="width:70px;">Qtd: ${item.qtd || 1}</td>
           <td style="width:80px;">R$ ${item.valor.toLocaleString('pt-BR')}</td>
           <td style="width:60px;">
             <button type="button" class="btn btn-sm btn-danger" onclick="removerItemOrcamento(${i})">Remover</button>
@@ -643,7 +658,7 @@
         </tr>
       `).join("") +
         '</tbody></table>';
-      total = orcamentoItensTmp.reduce((acc, it) => acc + (it.valor*(it.qtd||1)), 0);
+      total = orcamentoItensTmp.reduce((acc, it) => acc + (it.valor * (it.qtd || 1)), 0);
       document.getElementById('orc-form-valor').value = total.toFixed(2);
     }
 
@@ -653,7 +668,7 @@
     function adicionarItemOS() {
       const nome = document.getElementById('os-item-nome').value.trim();
       const valor = parseFloat(document.getElementById('os-item-valor').value);
-      let qtd = parseInt(document.getElementById('os-item-qtd').value)||1;
+      let qtd = parseInt(document.getElementById('os-item-qtd').value) || 1;
       let estoqueId = null;
       let estoqueMatch = window.estoque.find(p => p.nome.toUpperCase() === nome.toUpperCase());
       if (estoqueMatch) {
@@ -663,7 +678,7 @@
           return;
         }
       }
-      if (nome && valor && valor > 0 && qtd>0) {
+      if (nome && valor && valor > 0 && qtd > 0) {
         osItensTmp.push({ nome, valor, qtd, estoqueId });
         document.getElementById('os-item-nome').value = '';
         document.getElementById('os-item-valor').value = '';
@@ -672,7 +687,7 @@
       }
     }
     function removerItemOS(idx) {
-      osItensTmp.splice(idx,1);
+      osItensTmp.splice(idx, 1);
       renderOSItens();
     }
     function renderOSItens() {
@@ -687,7 +702,7 @@
         osItensTmp.map((item, i) => `
         <tr>
           <td>${item.nome}${item.estoqueId ? ' <span style="color:#009688;font-size:.9em;">[Estoque]</span>' : ''}</td>
-          <td style="width:70px;">Qtd: ${item.qtd||1}</td>
+          <td style="width:70px;">Qtd: ${item.qtd || 1}</td>
           <td style="width:80px;">R$ ${item.valor.toLocaleString('pt-BR')}</td>
           <td style="width:60px;">
             <button type="button" class="btn btn-sm btn-danger" onclick="removerItemOS(${i})">Remover</button>
@@ -695,7 +710,7 @@
         </tr>
       `).join("") +
         '</tbody></table>';
-      total = osItensTmp.reduce((acc, it) => acc + (it.valor*(it.qtd||1)), 0);
+      total = osItensTmp.reduce((acc, it) => acc + (it.valor * (it.qtd || 1)), 0);
       document.getElementById('os-form-valor').value = total.toFixed(2);
     }
 
@@ -712,7 +727,7 @@
         <td>${veic ? veic.marca + " (" + veic.placa + ")" : '-'}</td>
         <td>
           <ul style="padding-left:1em;margin:0;">
-            ${or.itens ? or.itens.map(it => `<li>${it.nome}${it.estoqueId ? ' <span style="color:#009688;font-size:.9em;">[Estoque]</span>' : ''} - Qtd: ${it.qtd||1} - R$ ${(it.valor).toLocaleString('pt-BR')}</li>`).join("") : "-"}
+            ${or.itens ? or.itens.map(it => `<li>${it.nome}${it.estoqueId ? ' <span style="color:#009688;font-size:.9em;">[Estoque]</span>' : ''} - Qtd: ${it.qtd || 1} - R$ ${(it.valor).toLocaleString('pt-BR')}</li>`).join("") : "-"}
           </ul>
         </td>
         <td>R$ ${(+or.valor).toLocaleString('pt-BR')}</td>
@@ -739,7 +754,7 @@
         for (let it of orc.itens) {
           if (it.estoqueId) {
             let est = window.estoque.find(e => e.id == it.estoqueId);
-            if (!est || est.qtd < (it.qtd||1)) {
+            if (!est || est.qtd < (it.qtd || 1)) {
               notificar(`Peça "${it.nome}" sem estoque suficiente!`);
               return;
             }
@@ -751,7 +766,7 @@
         for (let it of orc.itens) {
           if (it.estoqueId) {
             let est = window.estoque.find(e => e.id == it.estoqueId);
-            est.qtd -= (it.qtd||1);
+            est.qtd -= (it.qtd || 1);
             if (est.qtd < 0) est.qtd = 0;
           }
         }
@@ -872,6 +887,98 @@
       }
     }
 
+    function baixarOrcamentoPDF(id) {
+      const { jsPDF } = window.jspdf;
+      const orc = getOrcById(id);
+      if (!orc) {
+        notificar("Orçamento não encontrado!");
+        return;
+      }
+      const cli = getClienteById(orc.clienteId);
+      const veic = cli && cli.veiculos[orc.veiculoIdx];
+      let itens = orc.itens || [];
+      let obs = orc.obs || "";
+
+      const doc = new jsPDF();
+
+      // LOGO: recupera do localStorage
+      const logoBase64 = localStorage.getItem('oficina_logo_base64');
+      if (logoBase64) {
+        // imgType pode ser 'PNG' ou 'JPEG' dependendo do logo
+        const imgType = logoBase64.startsWith("data:image/png") ? "PNG" : "JPEG";
+        // Largura e altura máximas para a logo
+        const imgProps = doc.getImageProperties(logoBase64);
+        const imgWidth = 58; // largura desejada em mm
+        const imgHeight = imgProps.height * (imgWidth / imgProps.width);
+        // Posição: canto superior direito (margem de 14mm da direita)
+        doc.addImage(
+          logoBase64,
+          imgType,
+          doc.internal.pageSize.getWidth() - imgWidth - 14, // X
+          10, // Y
+          imgWidth,
+          imgHeight
+        );
+      }
+
+      // Título
+      doc.setFontSize(16);
+      doc.setTextColor(44, 62, 80);
+      doc.text("ORÇAMENTO-NUNES MECÂNICA AUTOMOTIVA", 14, 20);
+
+      // Subtitulo
+      doc.setFontSize(13);
+      doc.text("Rua Ana Prodócimo n° 39, Almirante Tamandaré", 14, 26);
+      doc.text("Mecânicos: Claudinei Nunes e Diego Luiz", 14, 30);
+      doc.text("__________________________________________________", 14, 32);
+
+      // Dados do orçamento
+      doc.setFontSize(11);
+      let y = 32;
+      doc.text(`Cliente: ${cli ? cli.nome : "-"}`, 14, y + 8);
+      doc.text(`Veículo: ${veic ? veic.marca + " (" + veic.placa + ")" : "-"}`, 14, y + 16);
+      doc.text(`Telefone: ${cli ? cli.telefone : ""}`, 14, y + 24);
+      doc.text(`Email: ${cli ? cli.email : ""}`, 14, y + 32);
+      doc.text(`Status: ${orc.status}`, 14, y + 40);
+      doc.text(`Validade: ${formatarData(orc.validade)}`, 14, y + 48);
+
+      // Itens do orçamento
+      let tableRows = itens.map(i => [
+        i.nome,
+        i.qtd || 1,
+        "R$ " + (i.valor).toLocaleString('pt-BR')
+      ]);
+      let startY = y + 56;
+      doc.autoTable({
+        head: [["Item", "Qtd", "Valor"]],
+        body: tableRows,
+        startY,
+        styles: { fontSize: 10 },
+        headStyles: { fillColor: [0, 121, 107] }
+      });
+
+      // Valor total
+      let total = orc.valor || 0;
+      let afterTable = doc.lastAutoTable.finalY + 8;
+      doc.setFontSize(13);
+      doc.setTextColor(67, 160, 71);
+      doc.text(`Valor Total: R$ ${total.toLocaleString('pt-BR')}`, 14, afterTable);
+
+      // Observações
+      if (obs) {
+        doc.setFontSize(11);
+        doc.setTextColor(60, 60, 60);
+        doc.text("Observações:", 14, afterTable + 10);
+        doc.setFontSize(10);
+        doc.text(obs, 14, afterTable + 16);
+      }
+      doc.setFontSize(10);
+      doc.setTextColor(150);
+      doc.text("Nunes Mecânica Automotiva • Obrigado pela confiança!", 14, 285);
+
+      doc.save(`orcamento-${orc.id}.pdf`);
+    }
+
     // ====== OS (INTEGRADA AO ESTOQUE) ======
     function renderOS() {
       let tbody = document.getElementById('os-table');
@@ -885,7 +992,7 @@
         <td>${veic ? veic.marca + " (" + veic.placa + ")" : '-'}</td>
         <td>
           <ul style="padding-left:1em;margin:0;">
-            ${os.itens ? os.itens.map(it => `<li>${it.nome}${it.estoqueId ? ' <span style="color:#009688;font-size:.9em;">[Estoque]</span>' : ''} - Qtd: ${it.qtd||1} - R$ ${(it.valor).toLocaleString('pt-BR')}</li>`).join("") : os.descricao || "-"}
+            ${os.itens ? os.itens.map(it => `<li>${it.nome}${it.estoqueId ? ' <span style="color:#009688;font-size:.9em;">[Estoque]</span>' : ''} - Qtd: ${it.qtd || 1} - R$ ${(it.valor).toLocaleString('pt-BR')}</li>`).join("") : os.descricao || "-"}
           </ul>
         </td>
         <td>R$ ${(+os.valor).toLocaleString('pt-BR')}</td>
@@ -948,7 +1055,7 @@
         for (let it of itens) {
           if (it.estoqueId) {
             let est = window.estoque.find(e => e.id == it.estoqueId);
-            if (!est || est.qtd < (it.qtd||1)) {
+            if (!est || est.qtd < (it.qtd || 1)) {
               notificar(`Peça "${it.nome}" sem estoque suficiente!`);
               return;
             }
@@ -964,7 +1071,7 @@
           for (let it of o.itens) {
             if (it.estoqueId) {
               let est = window.estoque.find(e => e.id == it.estoqueId);
-              if (est) est.qtd += (it.qtd||1);
+              if (est) est.qtd += (it.qtd || 1);
             }
           }
         }
@@ -979,7 +1086,7 @@
         for (let it of itens) {
           if (it.estoqueId) {
             let est = window.estoque.find(e => e.id == it.estoqueId);
-            if (est) { est.qtd -= (it.qtd||1); if (est.qtd < 0) est.qtd = 0; }
+            if (est) { est.qtd -= (it.qtd || 1); if (est.qtd < 0) est.qtd = 0; }
           }
         }
         saveData();
@@ -994,7 +1101,7 @@
           for (let it of o.itens) {
             if (it.estoqueId) {
               let est = window.estoque.find(e => e.id == it.estoqueId);
-              if (est) est.qtd += (it.qtd||1);
+              if (est) est.qtd += (it.qtd || 1);
             }
           }
         }
@@ -1258,4 +1365,6 @@
   </script>
 
 
-</body></html>
+</body>
+
+</html>
